--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ header {
   color: hsl(206, 17%, 28%);
 }
 
-header p {
+header div {
     float: right;
     font-size: 25px;
 }
@@ -71,11 +71,6 @@ header p {
   padding: 14px 34px;
   text-align: center;
   cursor: pointer;
-}
-
-button[disabled] {
-  cursor: default;
-  background: #c0c7cf;
 }
 
 .float-right {
