--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ body,
 
 body {
   font-family: sans-serif;
+  background-color: #FAF9F6;
 }
 
 .wrapper {
@@ -57,6 +58,17 @@ header div {
   text-align: center;
 }
 
+.highscore-btn {
+    --hue: var(var(--hue-neutral))
+    padding: 5px;
+    font-size: large;
+    background-color: royalblue;
+    color: white;
+    border-radius: 20px;
+    box-shadow: 0 0 10px 2px;
+    border: 1px solid grey;
+
+}
 
 .btn {
   border: none;
@@ -71,6 +83,42 @@ header div {
   padding: 14px 34px;
   text-align: center;
   cursor: pointer;
+}
+
+.btn:hover,
+.highscore-btn:hover,
+.btn-1:hover,
+.btn-2:hover,
+.btn-3:hover,
+.btn-4:hover,
+.answer-btn:hover {
+    border: 2px solid black
+}
+
+.hide {
+    display: none;
+}
+
+.question-asked{
+    text-align: center;
+}
+
+.btn-1,
+.btn-2,
+.btn-3,
+.btn-4,
+.answer-btn {
+    margin: 10px;
+    display: flex;
+    padding: 5px;
+    font-size: large;
+    background-color: royalblue;
+    color: white;
+    border-radius: 20px;
+    box-shadow: 0 0 10px 2px;
+    border: 1px solid grey;
+    min-width: 100px;
+    justify-content: center;
 }
 
 .float-right {
