--- a/style.css
+++ b/style.css
@@ -24,6 +24,11 @@ body {
   padding-right: 20px;
 }
 
+.centering {
+  display: flex;
+  margin: auto;
+}
+
 header {
   padding-top: 0px;
   color: hsl(206, 17%, 28%);
@@ -67,7 +72,11 @@ header div {
     border-radius: 20px;
     box-shadow: 0 0 10px 2px;
     border: 1px solid grey;
+}
 
+#highscore-list {
+  font-size: xx-large;
+  text-transform: uppercase;
 }
 
 .btn {
